Output path change

--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "outputPath": "dist/krishnaspeaksin",
+            "outputPath": "dist/krishnaspeaksin/browser",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
