--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
+    "deploy": "npm run build:prod && copy dist\\krishnaspeaksin\\browser\\index.html dist\\krishnaspeaksin\\browser\\404.html && npx ngh --dir dist/krishnaspeaksin/browser --cname=www.krishnaspeaks.in",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -38,6 +40,8 @@
     "@angular/cli": "^20.1.3",
     "@angular/compiler-cli": "^20.1.0",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.3",
+    "gh-pages": "^6.3.0",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
